syntax = "proto3";

option java_multiple_files = true;
option java_package = "cl.ucn.disc.pdis.fivet.grpc";

message AuthenticateReq {
  string login = 1;
  string password = 2;
}
message ControlEntity {
  string fecha = 1;
  double temperatura = 2;
  double peso = 3;
  double altura = 4;
  string diagnostico = 5;
  PersonaEntity veterinario = 6;
}
message AddControlReq {
  int32 numero_ficha = 1;
  ControlEntity control = 2;
}
message AddPersonaReq {
  PersonaEntity persona = 1;
}

enum SexoEntity {
  UNDEFINED = 0;
  MACHO = 1;
  HEMBRA = 2;
}

message RetrieveFichaMedicaReq {
  int32 numero_ficha=1;
}

message RetrievePersonaReq {
  string login = 1;
}

message SearchFichaMedicaReq {
  string q = 1;
}

message AddFichaMedicaReq {
  FichaMedicaEntity ficha = 1;
}

message PersonaEntity {
  string rut = 1;
  string password = 2;
  string nombre = 3;
  string email = 4;
  string direccion = 5;
}
message PersonaReply {
  PersonaEntity persona = 1;
}

message FichaMedicaEntity {
  int32 numero = 1;
  string nombre_paciente = 2;
  string especie = 3;
  string fecha_nacimiento = 4;
  string raza = 5;
  string color = 6;
  string tipo = 7;
  SexoEntity sexo = 8;
  PersonaEntity duenio = 9;
  repeated ControlEntity controles = 10;
}


message FichaMedicaReply {
  FichaMedicaEntity ficha_medica = 1;
}


service FivetService {
  rpc authenticate(AuthenticateReq) returns (PersonaReply) {}
  rpc addControl(AddControlReq) returns (FichaMedicaReply) {}
  rpc retrieveFichaMedica(RetrieveFichaMedicaReq) returns (FichaMedicaReply) {}
  rpc addPersona(AddPersonaReq) returns (PersonaReply) {}
  rpc retrievePersona(RetrievePersonaReq) returns (PersonaReply) {}
  rpc searchFichaMedica(SearchFichaMedicaReq) returns (stream FichaMedicaReply) {}
  rpc addFichaMedica(AddFichaMedicaReq) returns (FichaMedicaReply) {}
}